To email a contributor remove "DELETE" from the email address.
(The DELETEs are necessary as this list is published online.)

2021/07/14 Jeffrey Fulmer http://www.joedog.org/support/
 * src/browser.c          Added HTTP response 201 handler
 * src/response.c         Added Content-Location handler
 * src/response.h         Added CONTENT_LOCATION value
 * src/http.c             Added Content-Location parser
 * src/cfg.c              Added an escape handler for $ in URLs
 * src/eval.c             Added function escape(str) to remove '\'
 * src/ssl.c              Put ERR_remove_state inside ssl version
 * src/url.c              Added fix for null path checking
 * src/util.c             Fixed np_phtread_usleep for Solaris
 * src/version.c          Version increment: 4.1.1

2021/07/07 Jeffrey Fulmer http://www.joedog.org/support/
 * src/url.c              Removed leading / from ftp paths

2021/07/07 midchildan https://github.com/midchildan
 * src/browser.c          fixed: "--reps=once" 
 * src/main.c             fixed: "--reps=once" 

2021/07/04 Jeffrey Fulmer http://www.joedog.org/support/
 * src/init.c             Fixed password parsing # can be in pwd
 * src/auth.c             Prettified credentials output for siege -C
 * src/version.c          Version increment: 4.1.0

2021/04/17 Jeffrey Fulmer http://www.joedog.org/support/
 * src/cookie.c           Added NULL checks for getters
 * version.c              Version increment: 4.0.9

2021/04/17 Vedran Miletic https://github.com/vedranmiletic
 * src/main.c             Prettified json

2021/03/17 Jeffrey Fulmer http://www.joedog.org/support/
 * src/hash.c             Added explicit include of sys/types.h
 * src/version.c          Version increment: 4.0.8; Copyright 2021

2021/03/16 Zosecer https://github.com/zosecer
 * src/parser.c           Added handling for null pointer detection

2020/07/11 Jeffrey Fulmer http://www.joedog.org/support/
 * src/cookie.c           Fixed an issue with expires